--- a/source/CapFrameX.Configuration/app.config
+++ b/source/CapFrameX.Configuration/app.config
@@ -89,8 +89,11 @@
             <setting name="ThirdMetric" serializeAs="String">
                 <value>P0dot1</value>
             </setting>
-            <setting name="ComparisonContext" serializeAs="String">
+            <setting name="ComparisonContextA" serializeAs="String">
                 <value>DateTime</value>
+            </setting>
+              <setting name="ComparisonContextB" serializeAs="String">
+                <value>None</value>            
             </setting>
             <setting name="RecordingListSortMemberPath" serializeAs="String">
                 <value>GameName</value>
